--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.1",
     "@iconify/react": "^4.1.1",
+    "@mui/icons-material": "^5.15.14",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
     "autosuggest-highlight": "^3.3.4",
@@ -34,6 +35,7 @@
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
+    "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
