--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^11.0.14",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
@@ -44,7 +44,8 @@
     "simplebar-react": "^3.2.4",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.25",
