--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mui/material": "^5.14.12",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
     "framer-motion": "^11.0.14",
     "history": "^5.3.0",
