--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.1",
     "@iconify/react": "^4.1.1",
+    "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.147",
-    "@mui/material": "^5.14.12",
+    "@mui/material": "^5.15.15",
     "autosuggest-highlight": "^3.3.4",
-    "axios": "^1.5.1",
+    "axios": "^1.6.8",
     "date-fns": "^2.30.0",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.14",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
