--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.1.1",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.6.8",
     "date-fns": "^2.30.0",
