--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prop-types": "^15.8.1",
     "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
