--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev:host": "vite --host"
   },
   "dependencies": {
+    "@date-io/dayjs": "^3.0.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -26,11 +27,14 @@
     "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.15.14",
     "@mui/lab": "^5.0.0-alpha.147",
-    "@mui/material": "^5.14.12",
+    "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.2.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.14",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
@@ -44,6 +48,7 @@
     "react-hook-form": "^7.47.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^10.0.5",
     "simplebar-react": "^3.2.4",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
