--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.1.1",
+    "@mui/x-date-pickers": "^7.2.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.14",
     "history": "^5.3.0",
@@ -47,6 +49,7 @@
     "react-hook-form": "^7.47.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^10.0.5",
     "simplebar-react": "^3.2.4",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
