--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -20,7 +20,7 @@ FROM node:20-alpine3.17 as staging
 
 WORKDIR /app
 
-COPY --from=development dist /app
+COPY --from=development /app/dist .
 
 EXPOSE 3031
 
