--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -12,11 +12,7 @@ COPY . .
 
 RUN yarn build
 
-EXPOSE 3031
-
-FROM node:20-alpine3.17 as staging
-
-WORKDIR /app
+FROM development as staging
 
 COPY --from=development /app/dist .
 
