--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -8,7 +8,8 @@ COPY yarn.lock ./
 
 # Install esbuild
 
-RUN yarn install
+# increase the network timeout
+RUN yarn install --network-timeout 100000
 
 COPY . .
 
