--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "framer-motion": "^11.0.14",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "mui-file-input": "^4.0.4",
     "mui-one-time-password-input": "^2.0.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
