--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "simplebar-react": "^3.2.4",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
+    "swr": "^2.2.5",
     "yup": "^1.3.2",
     "zustand": "^4.5.2"
   },
