--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.5",
