--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash": "^4.17.21",
     "mui-file-input": "^4.0.4",
     "mui-one-time-password-input": "^2.0.2",
+    "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "qr-scanner": "^1.4.2",
@@ -50,7 +51,7 @@
     "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
-    "react-lazy-load-image-component": "^1.6.3",
+    "react-hot-toast": "^2.4.1",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.5",
