--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "re:start": "yarn rm:all && yarn install && yarn dev",
     "re:build": "yarn rm:all && yarn install && yarn build",
     "re:build-npm": "npm run rm:all && npm install && npm run build",
-    "dev:host": "vite --host"
+    "dev:host": "vite --host",
+    "test": "vitest"
   },
   "dependencies": {
     "@date-io/dayjs": "^3.0.0",
@@ -52,6 +53,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.5",
@@ -79,6 +81,7 @@
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.11",
-    "vite-plugin-checker": "^0.6.2"
+    "vite-plugin-checker": "^0.6.2",
+    "vitest": "^2.1.8"
   }
 }
