--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   "dependencies": {
     "@date-io/dayjs": "^3.0.0",
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.3.1",
     "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.147",
-    "@mui/material": "^5.15.15",
+    "@mui/material": "^6.3.0",
+    "@mui/x-charts": "^7.23.2",
     "@mui/x-data-grid": "^7.1.1",
     "@mui/x-date-pickers": "^7.2.0",
     "autosuggest-highlight": "^3.3.4",
