--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.5",
     "simplebar-react": "^3.2.4",
+    "socket.io-client": "^4.8.1",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.5",
