--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@mui/x-charts": "^7.23.2",
     "@mui/x-data-grid": "^7.1.1",
     "@mui/x-date-pickers": "^7.2.0",
+    "@tiptap/pm": "^2.11.2",
+    "@tiptap/react": "^2.11.2",
+    "@tiptap/starter-kit": "^2.11.2",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
