--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-toastify": "^10.0.5",
     "simplebar-react": "^3.2.4",
     "socket.io-client": "^4.8.1",
+    "sonner": "^1.7.2",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.5",
