--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
+    "apexcharts": "^4.5.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
@@ -51,6 +52,7 @@
     "prop-types": "^15.8.1",
     "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
