--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/pm": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
+    "add-to-calendar-button-react": "^2.8.9",
     "apexcharts": "^4.5.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.5.1",
