--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lodash": "^4.17.21",
     "mui-file-input": "^4.0.4",
     "mui-one-time-password-input": "^2.0.2",
+    "mui-tel-input": "^9.0.0",
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
@@ -61,6 +62,7 @@
     "react-hot-toast": "^2.4.1",
     "react-lazy-load-image-component": "^1.6.3",
     "react-number-format": "^5.4.3",
+    "react-phone-number-input": "^3.4.12",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.5",
