--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-facebook-pixel": "^1.0.4",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
