--- a/package.json
+++ b/package.json
@@ -63,11 +63,14 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-markdown": "^10.1.0",
     "react-number-format": "^5.4.3",
     "react-phone-number-input": "^3.4.12",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^10.0.5",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "serve": "^14.2.4",
     "simplebar-react": "^3.2.4",
     "socket.io-client": "^4.8.1",
