--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mui-tel-input": "^9.0.0",
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
+    "papaparse": "^5.5.3",
     "prop-types": "^15.8.1",
     "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
