--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "framer-motion": "^11.0.14",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "mui-color-input": "^7.0.0",
     "mui-file-input": "^4.0.4",
     "mui-one-time-password-input": "^2.0.2",
     "mui-tel-input": "^9.0.0",
